[package]
name = "sanitainer"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Token/credential sanitizer for devcontainer logs with WASM and JNI bindings"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["native"]
native = []
wasm = ["wasm-bindgen"]
# Enable JNI bindings
jni = ["dep:jni", "dep:serde", "dep:serde_json"]

[dependencies]
regex = "1.10"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# enable serde in WASM/JNI entry points (optional but handy)
[target.'cfg(any(feature = "wasm", feature = "jni"))'.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.jni]
version = "0.21"
optional = true
